--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,23 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  suffix: MyString
-  email: MyString
-  phone: MyString
-  password_digest: MyString
-  admin: 
-  judge: 
-  enabled: 
-
-two:
-  first_name: MyString
-  last_name: MyString
-  suffix: MyString
-  email: MyString
-  phone: MyString
-  password_digest: MyString
-  admin: 
-  judge: 
-  enabled: 
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
